# aletheia-pressure-evals

./: .gitignore  LICENSE  README.md  pyproject.toml
configs/: experiment.yaml  models.yaml
data/: calibration_examples.jsonl  control_scenarios.jsonl  scenarios.jsonl
data/annotations/: escalation_review.csv  escalation_review_full.csv  escalation_review_priority.csv
data/evaluations/: baseline-v0.1-20260722.blinding_key.json  baseline-v0.1-20260722.gemma3-4b.sample.jsonl  baseline-v0.1-20260722.gemma3-4b.sample.manifest.json  baseline-v0.1-20260722.jsonl  baseline-v0.1-20260722.llama3-2-3b.sample.jsonl  baseline-v0.1-20260722.llama3-2-3b.sample.manifest.json  baseline-v0.1-20260722.manifest.json  (+1 more)
docs/: evaluation_methodology.md  literature_matrix.csv  rubric_card.md
paper/: CITATION_AUDIT.md  references.bib
reports/: baseline_v0.1_evaluation_audit.md  baseline_v0.1_executive_summary.md  baseline_v0.1_limitations.md  baseline_v0.1_report.md  baseline_v0.1_reproducibility.md  baseline_v0.1_results.csv  baseline_v0.1_results.json  baseline_v0.1_robustness.md  computational_costs.md  decision_log.md  escalation_reason_breakdown.csv  escalation_reason_summary.md  experiment_registry.csv  judge_agreement.csv  preregistration.md  protocol_deviations.md  research_log.md  study_protocol.md
tests/: test_analyze.py  test_audit.py  test_config.py  test_consensus.py  test_evaluate.py  test_external_judge.py  test_generate.py  test_manifest.py  test_ollama_client.py  test_prompts.py  test_sampling.py  test_scenarios_data.py  test_schemas.py  test_validate.py
(+21 files in other folders)
