[project]
name = "pressure-evals"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
scripts = { "pressure-evals" = "pressure_evals.cli:app" }
dependencies = [
    "anthropic>=0.118.0",
    "duckdb>=1.5.4",
    "jinja2>=3.1.6",
    "matplotlib>=3.11.1",
    "ollama>=0.6.2",
    "pandas>=3.0.3",
    "polars>=1.43.0",
    "pyarrow>=25.0.0",
    "pydantic>=2.13.4",
    "pyyaml>=6.0.3",
    "rich>=15.0.0",
    "scikit-learn>=1.9.0",
    "scipy>=1.18.0",
    "statsmodels>=0.14.6",
    "tenacity>=9.1.4",
    "tqdm>=4.69.0",
    "typer>=0.27.0",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pressure_evals"]

[tool.pytest.ini_options]
pythonpath = ["src"]
